--- a/Fantasy/Properties/launchSettings.json
+++ b/Fantasy/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:38240",
-      "sslPort": 44323
+      "applicationUrl": "http://localhost:46410",
+      "sslPort": 44306
     }
   },
   "profiles": {
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5031",
+      "applicationUrl": "http://localhost:5152",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7033;http://localhost:5031",
+      "applicationUrl": "https://localhost:7072",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
